// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class: JsxScope > findPkgLocalInstallers > correctly finds installers for a given package that was installed in an intermediate package 1`] = `
[
  {
    "dependencies": [
      {
        "name": "instrumented",
        "version": "2.0.0",
      },
    ],
    "name": "package2",
    "version": "1.0.0",
  },
  {
    "dependencies": [
      {
        "name": "intermediate",
        "version": "1.0.0",
      },
    ],
    "name": "package3",
    "version": "1.0.0",
  },
]
`;

exports[`class: JsxScope > findPkgLocalInstallers > correctly finds installers for a top-level package 1`] = `
[
  {
    "dependencies": [
      {
        "name": "foo",
        "version": "1.0.0",
      },
      {
        "name": "instrumented",
        "version": "0.1.0",
      },
    ],
    "name": "basic-project",
    "version": "1.0.0",
  },
]
`;

exports[`class: JsxScope > parseFile > correctly detects imports and elements in a given file > elements 1`] = `
[
  {
    "attributes": [
      {
        "name": "firstProp",
        "value": ComplexAttribute {
          "complexValue": "1 === 5 ? 'boo' : 'baa'",
        },
      },
      {
        "name": "simple",
        "value": "4",
      },
      {
        "name": "woo",
        "value": true,
      },
    ],
    "name": "Button",
    "prefix": undefined,
  },
  {
    "attributes": [
      {
        "name": "firstProp",
        "value": ComplexAttribute {
          "complexValue": "1 === 5 ? 'boo' : 'baa'",
        },
      },
      {
        "name": "simple",
        "value": "4",
      },
      {
        "name": "woo",
        "value": true,
      },
    ],
    "name": "Button",
    "prefix": undefined,
  },
]
`;

exports[`class: JsxScope > parseFile > correctly detects imports and elements in a given file > imports 1`] = `
[
  {
    "isAll": false,
    "isDefault": true,
    "name": "[Default]",
    "path": "instrumented",
    "rename": "Button",
  },
]
`;

exports[`class: JsxScope > resolvePackages > correctly populates packageResolutions map 1`] = `
{
  "complex-nesting-thingy": {
    "name": "complex-nesting-thingy",
    "version": "1.0.0",
  },
  "package1": {
    "name": "package1",
    "version": "1.0.0",
  },
  "package2": {
    "name": "package2",
    "version": "1.0.0",
  },
  "package3": {
    "name": "package3",
    "version": "1.0.0",
  },
}
`;

exports[`class: JsxScope > run > captures metric when instrumented package is installed in intermediate package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.raw": "gitOrigin",
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "project.id": "projectId",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.raw": "gitOrigin",
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "project.id": "projectId",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.invoker.package.name": "670c9cf71fecc89e91575d9e471595d52f98622435069e0cfcb4c0772947dc80",
                  "jsx.element.invoker.package.raw": "670c9cf71fecc89e91575d9e471595d52f98622435069e0cfcb4c0772947dc80",
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "Package2Comp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.invoker.package.name": "b344e64a89a17da4d80e8b247566c6ec1e0ddde22214d2c4579053d9266db166",
                  "jsx.element.invoker.package.raw": "b344e64a89a17da4d80e8b247566c6ec1e0ddde22214d2c4579053d9266db166",
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "Package3Comp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "jsx.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "jsx",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: JsxScope > run > correctly captures jsx element metric data 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.raw": "gitOrigin",
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "project.id": "projectId",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.raw": "gitOrigin",
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "project.id": "projectId",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.invoker.package.name": "e497ed4e62a3b47d9cd8aaebefb6c0837b94fb8d710461ba203aa33ccf64cc4d",
                  "jsx.element.invoker.package.raw": "e497ed4e62a3b47d9cd8aaebefb6c0837b94fb8d710461ba203aa33ccf64cc4d",
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "[Default]",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "secondProp",
                    "[redacted6]",
                    "[redacted8]",
                    "[redacted10]",
                    "[redacted11]",
                    "[redacted12]",
                    "[redacted14]",
                  ],
                  "jsx.element.attributes.values": [
                    "hi",
                    "wow",
                    "[redacted7]",
                    "[redacted9]",
                    "[redacted5]",
                    "[redacted5]",
                    "[redacted13]",
                    "[redacted15]",
                  ],
                  "jsx.element.invoker.package.name": "e497ed4e62a3b47d9cd8aaebefb6c0837b94fb8d710461ba203aa33ccf64cc4d",
                  "jsx.element.invoker.package.raw": "e497ed4e62a3b47d9cd8aaebefb6c0837b94fb8d710461ba203aa33ccf64cc4d",
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "ImaginaryThing",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "jsx.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "jsx",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: JsxScope > run > does not capture metric for files that are not in instrumented package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.raw": "gitOrigin",
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "project.id": "projectId",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.raw": "gitOrigin",
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "project.id": "projectId",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "jsx.element.attributes.names": [
                    "firstProp",
                    "[redacted2]",
                    "[redacted4]",
                  ],
                  "jsx.element.attributes.values": [
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                  ],
                  "jsx.element.invoker.package.name": "73893d30923f338108486f1a6388bac31603db30e1b954a1ab6a77b1ab9d148d",
                  "jsx.element.invoker.package.raw": "73893d30923f338108486f1a6388bac31603db30e1b954a1ab6a77b1ab9d148d",
                  "jsx.element.module.specifier": "instrumented",
                  "jsx.element.name": "Package1Comp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "jsx.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "jsx",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;
